158 - Fixed people card spacing and tablet layout

--- a/assets/scss/core.scss
+++ b/assets/scss/core.scss
@@ -373,8 +373,8 @@ ol {
     grid-gap: 32px;
   }
 
-  @media(max-width: 700px) {
-    
+  // Mobile & tablet
+  @media(max-width: 900px) {
     &.grid-3 {
       grid-template-columns: 1fr 1fr;
       grid-gap: 4px;
